     error when using svn-import (#81908).

   * Support true push (#80612).

   * Support commits in heavy checkouts (#79330).

  PERFORMANCE

   * do_update() is now used to find the contents of a directory recursively. 
     This should reduce the number of roundtrips significantly when 
	 finding file id mappings.

  INTERNALS

   * Implement SvnRaTransport.local_abspath() (#117090)

bzr-svn 0.3.4	UNRELEASED

  BUG FIXES

  * Check for a working pysqlite, rather than checking that the 
    first one found works. (#115026)

bzr-svn 0.3.3	2007-04-29

  IMPROVEMENTS

  * Fix compatibility with 0.16 (#110164)

  * Don't do extra checkout before push if possible. (#91885)

  * Set parent URLs in svn-import. (#94406)

  * Don't show "not updating working tree" warnings when pushing.

bzr-svn 0.3.2	2007-03-13

  BUG FIXES

  * Fix compatibility with Bazaar 0.15.

  * Check for parent paths moving as well in LogWalker.find_latest_change(). 
    Fixes #84087.

  * Handle unicode characters in commit messages. Fixes #85551.

  * Handle unicode characters in filenames (#54736)

bzr-svn 0.3.1	2007-01-31

  BUG FIXES
 
   *  Warning given when the version of python-subversion is not patched 
      is now fixed. (Wouter van Heyst)

  IMPROVEMENTS

   * A proper warning will now be printed if no sqlite implementation is 
     available.

   * Working tree copies will be disabled if the version of python-subversion 
     is too old.

bzr-svn 0.3.0	2007-01-16

  BUG FIXES

   * Use checksums for the path in case the file id is too long. (#77453)

   * Don't rely on listdir() kind results. Fixes imports of several 
     repositories. (#56647)

   * Fixed two problems with replaces that are nested.

   * Branch downgrades and dir upgrades are now recognized properly (#67010).

   * Supported branching schemes other that trunk-0.

   * Properly recognize discontinued branches. (#76823)

   * Switched to storing data in SQLite. (#74798)
   
   * Locks ra transports. (#76280)
